# TS-Haystack

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default_generation_config.yaml
scripts/: aggregate_eval_results.py  build_core_artifacts.py  download_from_hf.py  generate_cot.py  generate_dataset.py  inspect_dataset.py
src/ts_haystack/: __init__.py
src/ts_haystack/capture24/: README.md  __init__.py  classification.py  evaluation.py  loader.py  metadata.csv  windows.py
src/ts_haystack/core/: __init__.py  activity_regimes.py  background_sampler.py  bout_indexer.py  data_structures.py  needle_sampler.py  prompt_templates.py  seed_manager.py  style_transfer.py  timeline_builder.py  transition_matrix.py
src/ts_haystack/cot/: __init__.py  cot_generator.py  llm_client.py  plot_generator.py  prompt_builder.py
src/ts_haystack/generation/: __init__.py  config.py  generator.py
src/ts_haystack/tasks/: __init__.py  base_task.py  task_anomaly_detection.py  task_anomaly_localization.py  task_antecedent.py  task_comparison.py  task_counting.py  task_existence.py  task_localization.py  task_multi_hop.py  task_ordering.py  (+1 more)
tests/: conftest.py  test_background_sampler.py  test_needle_sampler.py  test_phase2_integration.py  test_prompt_templates.py  test_style_transfer.py
tests/tasks/: conftest.py  test_task_anomaly_detection.py  test_task_anomaly_localization.py  test_task_antecedent.py  test_task_comparison.py  test_task_counting.py  test_task_existence.py  test_task_localization.py  test_task_multi_hop.py  test_task_ordering.py  test_task_state_query.py
(+8 files in other folders)
